# RColumbo

./: .gitignore  DESCRIPTION  NAMESPACE  README.md  configure  configure.ac
R/: GwasSim.R  LD.R  RSSgen.R  RcppExports.R  SNPrelate.R  h5fun.R  map_eQTL.R  orthogonalize.R  prep_RSS.R  snp_exp_import.R  testfun.R
analyses/: Candidate_eQTL.Rmd  Cis_Trans_eQTL.R  Clean_Data_Height_DGN.R  Clean_Data_Height_GTEx.R  Clean_Data_IBD_GTEx.R  ColorIndependent.R  DGN_eQTL.R  DGN_heritability.R  DGN_v_GTEx_LASSO.Rmd  DGN_v_GTEx_LASSO.nb.html  EUR_IBD_GWAS_diagnostics.Rmd  GTEx_MeQTL.R  GTEx_heritability.R  Generate_LD.R  Independent_GWAS.R  Independent_SNPs.R  Independent_SNPs.Rmd  Independent_SNPs.nb.html  Map_Elasticnet.R  Prepare_Lambda_Estimation.R  RColumboScratch.R  Spike_Slab_GWAS.Rmd  Spike_Slab_GWAS.html  Test_Chunksize.R  elasticnet_VB.Rmd  elasticnet_VB.nb.html  estimate_lambda.R  map_eQTL_DGN.R  map_eQTL_GTEx.R  sparklyrtest.R
analyses/Snakemake_scripts/: GDS2BED.R  Import_GTEX_EXP_H5.R  Import_GTEX_H5.R  Import_GTEx_GDS.R  Import_GTEx_SNP_H5.R  gcta_grm.R  gcta_heritability.R
analyses/eqtl_gwas_sample/: GTEx_WB_cis.tsv  GTEx_WB_trans_truncated.tsv  eQTL_GWAS_marginals.Rmd  eQTL_GWAS_marginals.nb.html  sub_EUR_IBD_gwas_data.tsv  sub_EUR_IBD_gwas_data.tsv.README
data/: ref_Covariates.rda  ref_X.rda  ref_Y.rda  ref_betahat_se.rda
inst/include/: RColumbo.h  RColumbo_RcppExports.h
inst/m_files/: band_storage.m  cholcov.m  corrcov.m  find_bandwidth.m  get_corr.m  shrink_cov.m
src/: EM.cpp  Graph.cpp  Graph.hpp  H5IO.cpp  H5IO.hpp  LD.cpp  LD.hpp  Makevars  Makevars.in  RcppExports.cpp  blosc_helpers.cpp  blosc_helpers.h  h5func.cpp  h5func.hpp  import_snp.cpp  map_eqtl.cpp  snp_exp.cpp  snp_exp.hpp  sparse_matrix.cpp
tests/: poslist_test.txt  rslist_test.txt  subset_geno_data.txt  subset_map_data.txt  subset_test_pos.RDS  subset_test_rs.RDS  test_1kg_geno_chr19.hap  test_1kg_geno_chr19.legend  testthat.R  true_R.csv  true_SigHat.csv
tests/testthat/: one.rds  testLD.R  test_eQTL.R
